--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -1,8 +1,16 @@
+p
+{
+    line-height: 1.2em;
+}
+
 a,
 a:active,
 a:visited,
-a:hover
+a:hover,
+mark
 {
+    border: 0;
+    background: transparent;
     color: #f25c00;
     text-decoration: none;
 }
@@ -84,3 +92,45 @@ footer.app p
 {
     text-align: center;
 }
+
+section.error
+{
+    text-align: center;
+}
+section.error ul
+{
+    margin: 0 auto;
+    padding: 0;
+    text-align: center;
+}
+
+.photos {
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+}
+    .photos ul{
+        display: block;
+        margin: 0;
+        list-style: none;
+        padding: 0;
+        width: 100%;
+    }
+    .photos .photo {
+        text-align: center;
+        box-sizing: border-box;
+        padding: 1em;
+        display: inline-block;
+        background: transparent;
+        width: 49%;
+            }
+        .photos .photo img {
+            border: 4px solid #ccc;
+            border-radius: 2em;
+            box-sizing: border-box;
+            display: block;
+            padding: .5em;
+            width: 100%;
+            max-width: 500px;
+        }
